src/test/resources/frontendReference/invalid/syntaxErr/sequence/missingSeq.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 13:2 -- extraneous input 'skip' expecting {'end', ';'}
1 parser error(s) detected, no further compilation attempted.
